Updates to site

--- a/about.html
+++ b/about.html
@@ -291,17 +291,30 @@
                 <div class="p-4">
                     <div id="rightCard3" class="card">
                         <div class="card-header bg-dark text-light">
-                            <em class="fas fa-folder-open"> File Transfer & Deployment</em>
+                            <em class="fas fa-book"> Libraries & Frameworks</em>
                         </div>
                         <div class="p-4">
                             <p class="card-text text-dark">
-                                - FileZilla (File Transfer Protocol)
+                                - React.js
                             </p>
                             <p class="card-text text-dark">
-                                - WinSCP (File Transfer Protocol)
+                                - Tailwind CSS
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!--Right card 5-->
+                <div class="p-4">
+                    <div id="rightCard5" class="card">
+                        <div class="card-header bg-dark text-light">
+                            <em class="fas fa-code-branch"> Management Tools</em>
+                        </div>
+                        <div class="p-4">
+                            <p class="card-text text-dark">
+                                - GitHub
                             </p>
                             <p class="card-text text-dark">
-                                - Globus Connect Personal
+                                - Jira
                             </p>
                         </div>
                     </div>
@@ -322,18 +335,21 @@
                         </div>
                     </div>
                 </div>
-                <!--Right card 5-->
+                 <!--Right card 3-->
                 <div class="p-4">
-                    <div id="rightCard5" class="card">
+                    <div id="rightCard3" class="card">
                         <div class="card-header bg-dark text-light">
-                            <em class="fas fa-code-branch"> Management Tools</em>
+                            <em class="fas fa-folder-open"> File Transfer & Deployment</em>
                         </div>
                         <div class="p-4">
                             <p class="card-text text-dark">
-                                - GitHub
+                                - FileZilla (File Transfer Protocol)
                             </p>
                             <p class="card-text text-dark">
-                                - Jira
+                                - WinSCP (File Transfer Protocol)
+                            </p>
+                            <p class="card-text text-dark">
+                                - Globus Connect Personal
                             </p>
                         </div>
                     </div>
