--- a/about.html
+++ b/about.html
@@ -93,7 +93,9 @@
         <div class="line line7">80%</div>
     </div>
     <!--End chart of skills-->
-
+    <div id = 'block'></div>
+    <div class='sk-ww-linkedin-recommendations' data-embed-id='156496'></div><script src='https://widgets.sociablekit.com/linkedin-recommendations/widget.js' async defer></script>
+  
     <!--Experience section-->
     <!--Create grid layout-->
     <div class="container">
