Removed LinkedIn Widget

--- a/about.html
+++ b/about.html
@@ -93,10 +93,10 @@
         <div class="line line7">80%</div>
     </div>
     <!--End chart of skills-->
-    <div class="container" id='skillschart'>
+    <!-- <div class="container" id='skillschart'>
         <div id = 'block'></div>
         <div class='sk-ww-linkedin-recommendations' data-embed-id='156496'></div><script src='https://widgets.sociablekit.com/linkedin-recommendations/widget.js' async defer></script>
-    </div>
+    </div> -->
   
     <!--Experience section-->
     <!--Create grid layout-->
